--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc89df9c550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f38f0b468d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc89e0003d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc89e0005d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f38ed126310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f38ed126510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc89e550c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc89e550e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f38ed675bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f38ed675dd0&gt;]</pre>
 </div>
 
 </div>
