--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0f80158990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb5643a4d10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0f7fa29dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0f7fe824d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb564051450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb564051650&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0f8043d910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0f803dfdd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb564610d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb564610f50&gt;]</pre>
 </div>
 
 </div>
