--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb5643a4d10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8bd540dd90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb564051450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb564051650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8bd5447390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8bd5447590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb564610d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb564610f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8bd568dc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8bd568de50&gt;]</pre>
 </div>
 
 </div>
