--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5480426cd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f33edc32bd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f548015b590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f548015b790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f33ed969350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f33ed92b550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f54806b8d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f54806b8f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f33edec6c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f33edec6e50&gt;]</pre>
 </div>
 
 </div>
