--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff327863450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe00155f650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff32758b450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff32758b690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe00121e450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe00121e650&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff327ae7e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff327af2050&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe0017e8d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe0017e8f50&gt;]</pre>
 </div>
 
 </div>
