--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa55e3f0910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe51ba34910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa55e1223d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa55e1225d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe51bda83d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe51bda85d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa55e672d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa55e672f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe51bfe4cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe51bfe4ed0&gt;]</pre>
 </div>
 
 </div>
