--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe51ba34910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1cefa869d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe51bda83d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe51bda85d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cef7a2390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1cef7a2590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe51bfe4cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe51bfe4ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cefd00c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1cefd00e50&gt;]</pre>
 </div>
 
 </div>
