--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f72cf400c50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efcdd745fd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f72cf0b92d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f72cf0b9510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efcdd156650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efcdd156850&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f72cf680c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f72cf680e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efcdd9e4150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efcdd9e4350&gt;]</pre>
 </div>
 
 </div>
