--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f50e7cbb910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3ce216f110&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f50e7d029d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f50e79e14d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ce1e777d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3ce1e779d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f50e82de250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f50e826ed50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ce23e7050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3ce23e7250&gt;]</pre>
 </div>
 
 </div>
