--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f59fc96d610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3dfe30eb50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f59fc364210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f59fc364410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3dfe35d350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3dfe35d550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f59fcbe8ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f59fcbe8cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3dfe8bebd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3dfe8bedd0&gt;]</pre>
 </div>
 
 </div>
