--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3dfe30eb50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f98d33e1fd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3dfe35d350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3dfe35d550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f98d3758410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f98d3758610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3dfe8bebd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3dfe8bedd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f98d3994d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f98d3994f10&gt;]</pre>
 </div>
 
 </div>
