--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efe471c76d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0da89e3310&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efe46eb05d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efe46eb07d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0da86f5490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0da89cff50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efe47449e90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efe474550d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0da8c53d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0da8c53f90&gt;]</pre>
 </div>
 
 </div>
