--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5ed36e5550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f097e704210&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5ed338e350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5ed338e550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f097ea8e4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f097ea8e6d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5ed3958cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5ed3958ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f097ecc9e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f097ecc9fd0&gt;]</pre>
 </div>
 
 </div>
