--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f505adf92d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f70a399e090&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f505ab193d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f505ab195d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f70a3647310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f70a3647550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f505b07ac90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f505b07ae90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f70a3c10bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f70a3c10e10&gt;]</pre>
 </div>
 
 </div>
