--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2f5932db90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2c63b6f8d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2f590403d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2f590405d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2c638343d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2c638345d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2f5959dc50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2f5959de50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2c63df4c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2c63df4e90&gt;]</pre>
 </div>
 
 </div>
