--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7f65ae8e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f37feb04c10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f658173d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7f658175d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f37fe8193d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f37fe8195d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f65d66c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7f65d66e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f37fed77c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f37fed77e90&gt;]</pre>
 </div>
 
 </div>
