--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8667ab6650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff0db986d10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f86671cbed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f86677d4690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff0db9b8490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff0db9b8690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8667d32d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8667d90810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff0dbf16d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff0dbf16f10&gt;]</pre>
 </div>
 
 </div>
